--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -7,11 +7,48 @@
 
 body {
     margin: 0px;
+    padding: 0px;
 }
 
 .main_container {
-    background-image: url(../SVG/background.svg);
+    background: url(../SVG/start_screen.svg) no-repeat center;
     width: 100%; height: 100%;
     position: absolute;
-    margin: 0px;
+}
+
+.port_list {
+    border: white 1px solid;
+    width: 428px;
+    height: 196px;
+    margin: 0;
+    position: absolute;
+    top: 201px;
+    left: 343px;
+}
+
+.port_list_item {
+    position:relative;
+    width: 100%;
+    min-height: 40px;
+    border: #17191A 1px solid;
+}
+
+.port_list_item_COM {
+    position:relative;
+    float: left;
+    min-height: 40px;
+    width: 20%;
+    height: 100%;
+}
+
+.port_list_item_DESC {
+    position:relative;
+    float: left;
+    min-height: 40px;
+    width: 80%;
+    height: 100%;
+}
+
+.port_list_item:hover {
+    border: white 1px solid;
 }
