--- a/assets/styles/window.scss
+++ b/assets/styles/window.scss
@@ -1,4 +1,7 @@
+@import 'spinner';
+
 $color1: #1c1f26;
+$color1-soft: rgba(28,31,28,0.7);
 $color2: #b8daff;
 $color3: #324152;
 
@@ -27,98 +30,126 @@ body, #root {
     overflow: hidden;
 }
 
-#root {
+.connect-screen {
+    width: 100%; height: 100%;
+    position: absolute;
     display: flex;
     justify-content: center;
+    .middle-panel {
+        display: flex;
+        flex-direction: column;
+        width: 450px;
+        height: 100%;
+        background-color: $color1;
+        .top-logo,
+        .port-list,
+        .bottom-logo {
+        width: 100%;
+        margin: 0 0;
+        }
+        .top-logo {
+        display: flex;
+        justify-content: center;
+        height: 35%;
+        padding-top: 5%;
+        }
+        .bottom-logo {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 5px;
+        height: 20%;
+        }
+        .port-list {
+        height: 45%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 5%;
+        margin-top: 5%;
+        overflow: auto;
+            .port-list-info{
+                font-style: italic;
+                color: $color2;
+                opacity: 0;
+                animation: ease 0.5s 1 forwards fadeIN;
+            }
+            .port-list-item {
+                border: 1px solid $color2;
+                background-color: $color2;
+                color: $color1;
+                opacity: 0;
+                margin: 0px auto;
+                margin-bottom: 15px;
+                height: 25px;
+                width: 80%;
+                display: flex;
+                flex-direction: row;
+                transition:box-shadow 0.2s ease-in;
+                transition:transform 0.2s ease-in;
+                animation: ease 0.5s 1 forwards fadeIN;
+            }
+            .port-list-item:hover {
+                cursor: pointer;
+                box-shadow: 3px 3px 15px 0px rgba(0, 0, 0, 0.6);
+                transform: translateX(-2px) translateY(-2px);
+            }
+            .port-list-item-com {
+                width: 20%;
+                color: white;
+                text-align: center;
+                text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.7);
+                position: relative;
+                z-index: 1;
+                padding: 2px 5px;
+            }
+            .port-list-item-com::before {
+                width: 100%;
+                height: 30px;
+                transform: skew(-30deg);
+                content: '';
+                top: -4px;
+                left: 3px;
+                position: absolute;
+                z-index: -1;
+                background-color: $color3;
+            }
+            .port-list-item-desc {
+                width: 80%;
+                text-align: center;
+                padding: 2px 5px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+        }
+    }
 }
 
-.middle-panel {
-    display: flex;
-    flex-direction: column;
-    width: 450px;
+.loading{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
     height: 100%;
-    background-color: $color1;
-    .top-logo,
-    .port-list,
-    .bottom-logo {
-    width: 100%;
-    margin: 0 0;
-    }
-    .top-logo {
+    margin: 0;
+    background-color: $color1-soft;
+    z-index: 10;
     display: flex;
     justify-content: center;
-    height: 35%;
-    padding-top: 5%;
-    }
-    .bottom-logo {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 5px;
-    height: 20%;
-    }
-    .port-list {
-    height: 45%;
-    display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    margin-bottom: 5%;
-    margin-top: 5%;
-    overflow: auto;
-        .port-list-info{
-            font-style: italic;
-            color: $color2;
-            opacity: 0;
-            animation: 1s ease 0.5s 1 forwards fadeIN;
-        }
-        .port-list-item {
-            border: 1px solid $color2;
-            background-color: $color2;
-            color: $color1;
-            opacity: 0;
-            margin: 0px auto;
-            margin-bottom: 15px;
-            height: 25px;
-            width: 80%;
-            display: flex;
-            flex-direction: row;
-            transition:box-shadow 0.2s ease-in;
-            transition:transform 0.2s ease-in;
-            animation: 1s ease 0.5s 1 forwards fadeIN;
-        }
-        .port-list-item:hover {
-            cursor: pointer;
-            box-shadow: 3px 3px 15px 0px rgba(0, 0, 0, 0.6);
-            transform: translateX(-2px) translateY(-2px);
-        }
-        .port-list-item-com {
-            width: 20%;
-            color: white;
-            text-align: center;
-            text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.7);
-            position: relative;
-            z-index: 1;
-            padding: 2px 5px;
-        }
-        .port-list-item-com::before {
-            width: 100%;
-            height: 30px;
-            transform: skew(-30deg);
-            content: '';
-            top: -4px;
-            left: 3px;
-            position: absolute;
-            z-index: -1;
-            background-color: $color3;
-        }
-        .port-list-item-desc {
-            width: 80%;
-            text-align: center;
-            padding: 2px 5px;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-        }
+    animation: ease 0.5s 1 forwards fadeIN;
+    .loading-spinner{
+        z-index: 11;
+    }   
+}
+
+.map-screen {
+    width: 100%; height: 100%;
+    position: absolute;
+    .map{
+        width: 100%;
+        height: 100%;
     }
 }
