--- a/assets/styles/window.scss
+++ b/assets/styles/window.scss
@@ -1,4 +1,5 @@
 @import 'spinner';
+@import '../../node_modules/antd/dist/antd.css';
 
 $color1: #1c1f26;
 $color1-soft: rgba(28,31,28,0.7);
@@ -9,7 +10,7 @@ $color3: #324152;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
-    font-family: TwCenMT-Condensed, Tw Cen MT Condensed;
+          font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 
 @keyframes fadeIN {
@@ -153,3 +154,51 @@ body, #root {
         height: 100%;
     }
 }
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+    position: fixed;
+    width: 36px;
+    height: 30px;
+    left: 36px;
+    top: 36px;
+  }
+  
+  /* Color/shape of burger icon bars */
+  .bm-burger-bars {
+    background: $color1;
+  }
+  
+  /* Position and sizing of clickable cross button */
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  
+  /* Color/shape of close button cross */
+  .bm-cross {
+    background: $color2;
+  }
+  
+  /* General sidebar styles */
+  .bm-menu {
+    background: $color1;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+  }
+  
+  /* Morph shape necessary with bubble or elastic */
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+  
+  /* Wrapper for item list */
+  .bm-item-list {
+    color: $color3;
+    padding: 0.8em;
+  }
+  
+  /* Styling of overlay */
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
